towards ffp with real data

--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,8 @@ dependencies:
         - geopy
         - geopandas
         - scipy
+        - pyjanitor
+        - seaborn
         - pip
         - pip:
                 - pyffp
