--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,8 @@ dependencies:
         - geopandas
         - scipy
         - pyjanitor
-        - seaborn
+        - seaborn        
         - pip
         - pip:
                 - pyffp
+                - geojsoncontour
