towards cartopy maps

--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
         - scipy
         - pyjanitor
         - seaborn        
+        - cartopy
         - pip
         - pip:
                 - pyffp
