towards rolling figs

--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,7 @@ dependencies:
         - pyjanitor
         - seaborn        
         - cartopy
+        - tabulate
         - pip
         - pip:
                 - pyffp
