--- a/environment.yml
+++ b/environment.yml
@@ -16,5 +16,6 @@ dependencies:
         - pip
         - pip:
                 - pyffp
+                - geojson
                 - geojsoncontour
                 - numpy-ext
