--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
         - pytest
         - black
         - tabulate
+        - pdfcrop.pl
         - pip
         # geospatial
         - geopy
