--- a/environment.yml
+++ b/environment.yml
@@ -18,7 +18,7 @@ dependencies:
         - geopandas
         - cartopy
         - pip:
-                  # - pyffp
+                  # - pyffp # jsta gh pip
                   # - geojson
                   # - geojsoncontour
                   - numpy-ext
