acceptance formatting,typo fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,32 @@
-.DS_Store
-.vscode
-*.pdf
 *.gpkg
-figures/*.tex
-data/*.csv
-mdtable.md
-eddypro-metadata_be-lon.md
-*.pyc
-*/__pycache__
-*.tmp
-*.png
-figures/*.db
-.smbdelete*
-*.pptx
 *.nc
-manuscript/reviewer_comments*
-manuscript/diff*
-manuscript/save*
+*.pdf
+*.png
+*.pptx
+*.pyc
+*.tar.gz
+*.tmp
+*.zip
+*/__pycache__
 
-manuscript/*.log
+.DS_Store
+.smbdelete*
+.vscode
+
+data/*.csv
+eddypro-metadata_be-lon.md
+figures/*.db
+figures/*.tex
+
 manuscript/*.aux
-manuscript/*.out
 manuscript/*.bbl
 manuscript/*.blg
+manuscript/*.log
+manuscript/*.out
+manuscript/diff*
+manuscript/reviewer_comments*
+manuscript/save*
+manuscript/manuscript.fdb*
+manuscript/*.fls
+
+mdtable.md
